--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="main.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Document</title>
   </head>
+
   <body>
     <div id="container-1">
       <h2 id="title-1">container 1</h2>
-      <div class="box" id="box-1">item 1</div>
-      <div class="box" id="box-2">item 2</div>
-      <div class="box" id="box-3">item 3</div>
-      <div class="box" id="box-4">item 4</div>
-    </div>
+      <div class="box1" id="box-1">item 1</div>
+      <div class="box2" id="box-2">item 2</div>
+      <div class="box3" id="box-3">item 3</div>
+      <div class="box4" id="box-4">item 4</div>
+
+  </div>
+       <div id="container-2">
+        <h2 id="title-2">container 2</h2>
+        <div class="box5" id="box-5">item 1</div>
+        <div class="box6" id="box-6">item 2</div>
+        <div class="box7" id="box-7">item 3</div>
+        <div class="box8" id="box-8">item 4</div>
   </body>
 </html>
